# zeroclaw

./: CHANGELOG.md  Cargo.toml  README.md  build-android.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/plugin-zerox1/: Cargo.toml
crates/plugin-zerox1/src/: client.rs  lib.rs  types.rs
crates/robot-kit/: Cargo.toml
src/: lib.rs  main.rs  migration.rs
src/agent/: loop_.rs
src/channels/: acp.rs  github.rs  mod.rs  napcat.rs  telegram.rs  zerox1.rs
src/config/: schema.rs
src/gateway/: api.rs  mod.rs  openai_compat.rs  openclaw_compat.rs  sse.rs  ws.rs
src/memory/: markdown.rs  sqlite.rs
src/onboard/: wizard.rs
src/plugins/: manifest.rs  registry.rs
src/security/: canary_guard.rs  mod.rs  pairing.rs  secrets.rs
src/tools/: browser_open.rs  elevenlabs.rs  http_request.rs  memory_observe.rs  mod.rs  phone.rs  pptx_read.rs  wasm_tool.rs  zerox1.rs
web/: package-lock.json
