[package]
name = "plugin-zerox1"
version = "0.1.13"
edition = "2021"
description = "ZeroX1 mesh network client for ZeroClaw"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.42", default-features = false, features = ["sync", "time", "rt"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }
